--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* You can add global styles to this file, and also import other style files */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
+@font-face {
+  font-family: pacifico;
+  src: url(assets/fonts/Pacifico-Regular.ttf);
+}
+@font-face {
+  font-family: lato;
+  src: url(assets/fonts/Lato-Regular.ttf);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: parisienne;
+  src: url(assets/fonts/Parisienne-Regular.ttf);
+}
+
+@font-face {
+  font-family: Noto;
+  src: url(assets/fonts/NotoSansSC-Regular.otf);
+}
+
+@font-face {
+  font-family: FredokaBold;
+  src: url(assets/fonts/FredokaOne-Regular.ttf);
+}
+
+body {
+  font: 16px FredokaBold, Helvetica, Arial;
+  background-color: rgb(187, 235, 251);
 }
