--- a/src/components/pageDiscussion/discussion.css
+++ b/src/components/pageDiscussion/discussion.css
@@ -1,4 +1,4 @@
-form { width: 100%;}
+.formDiscussion { width: 100%;}
 
 .inputClass{
   font: 1.2rem FredokaBold, Helvetica, Arial;
@@ -15,3 +15,14 @@ form { width: 100%;}
   }
 
 #messages { display: block;list-style-type: none; margin: 0; padding: 10px; word-break: break-word;}
+
+.messageFlex{
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.messagesRight{
+  position: relative;
+  width: 50%;
+  left: 60%;
+}
